scene_opengl.cpp
@@ -2248,12 +2248,12 @@ void SceneOpenGLShadow::buildQuads()
     const QRectF outerRect(QPointF(-leftOffset(), -topOffset()),
                            QPointF(topLevel()->width() + rightOffset(), topLevel()->height() + bottomOffset()));
 
-    const int width = qMax(topLeft.width(), bottomLeft.width()) +
+    const int width = qMax3(topLeft.width(), left.width(), bottomLeft.width()) +
                       qMax(top.width(), bottom.width()) +
-                      qMax(topRight.width(), bottomRight.width());
-    const int height = qMax(topLeft.height(), topRight.height()) +
+                      qMax3(topRight.width(), right.width(), bottomRight.width());
+    const int height = qMax3(topLeft.height(), top.height(), topRight.height()) +
                        qMax(left.height(), right.height()) +
-                       qMax(bottomLeft.height(), bottomRight.height());
+                       qMax3(bottomLeft.height(), bottom.height(), bottomRight.height());
 
     qreal tx1(0.0), tx2(0.0), ty1(0.0), ty2(0.0);
 
@@ -2355,13 +2355,13 @@ bool SceneOpenGLShadow::prepareBackend()
     const QSize topLeft(shadowPixmap(ShadowElementTopLeft).size());
     const QSize bottomRight(shadowPixmap(ShadowElementBottomRight).size());
 
-    const int width = qMax(topLeft.width(), bottomLeft.width()) +
+    const int width = qMax3(topLeft.width(), left.width(), bottomLeft.width()) +
                       qMax(top.width(), bottom.width()) +
-                      qMax(topRight.width(), bottomRight.width());
+                      qMax3(topRight.width(), right.width(), bottomRight.width());
 
-    const int height = qMax(topRight.height(), topLeft.height()) +
+    const int height = qMax3(topRight.height(), top.height(), topLeft.height()) +
                        qMax(left.height(), right.height()) +
-                       qMax(bottomLeft.height(), bottomRight.height());
+                       qMax3(bottomLeft.height(), bottom.height(), bottomRight.height());
 
     if (width == 0 || height == 0) {
         return false;
